--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.3",
     "next-cookies": "^2.0.3",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18",
     "styled-components": "^4.3.2"
   },
