--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@mui/material": "^5.15.15",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@videosdk.live/react-sdk": "^0.1.90",
     "next": "14.1.3",
     "next-cookies": "^2.0.3",
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
