--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "@videosdk.live/react-sdk": "^0.1.90",
